--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-jobmatchup = "^0.2.2"
+jobmatchup = "^0.3.2"
 click = "^8.1.3"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
